@@ -1,4 +1,8 @@
 Sep 14
-15:51	Backtracking algorithm may save memory
+15:51	Backtracking algorithm may save memory (Comment: actually not!!!)
 
 19:56	for iBranch = 1:arr_Branch % arr_Branch is an array!!!
+
+Sep 15
+15:55	fix serious bug: power injection is accumulating noises
+		remove irrelevant and time-consuming function parameters
